<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright 2012 Manh Luong   Bui
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~  http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
-->

<resources>
    <string name="ratemedialog_app_name">RateMeDialog</string>
    <string name="ratemedialog_rate">Rate</string>
    <string name="ratemedialog_later">Later</string>
    <string name="ratemedialog_never">Never</string>
    <string name="ratemedialog_please">Do you like this app?\nPlease, rate it on the Market!</string>
    <string name="ratemedialog_more">More apps!</string>
    <string name="ratemedialog_title">Please, rate the app!</string>

</resources>